# shred-pipeline-rs

./: Cargo.toml  README.md  build.rs
proto/: shredstream.proto
src/: error.rs  lib.rs  main.rs  types.rs
src/decoder/: decoder.rs  mod.rs
src/receiver/: mod.rs  receiver.rs
tests/: integration.rs
