[package]
name = "shred-pipeline-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
futures = "0.3"
bytes = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tonic = { version = "0.9", features = ["transport"] }
prost = "0.11"

[build-dependencies]
tonic-build = "0.9"
prost-build = "0.11"

[dev-dependencies]

[lib]
crate-type = ["cdylib", "rlib"]