[package]
name = "shred-pipeline-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
futures = "0.3"
bytes = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tonic = { version = "0.9", features = ["transport"] }
prost = "0.11"
solana-sdk = { version = "1.16", default-features = false, features = ["full"] }
solana-entry = "1.16"
bincode = "1.3"
bs58 = "0.4"
byteorder = "1.4"
base64 = "0.21"
flate2 = "1.0"
snap = "1.1"
brotli = "3.3"
bzip2 = "0.4"
lz4-flex = "0.11"
zstd = "0.13"

[build-dependencies]
tonic-build = "0.9"
prost-build = "0.11"

[dev-dependencies]
rand = "0.8"

[lib]
crate-type = ["cdylib", "rlib"]